edit main color and navbar

--- a/about.html
+++ b/about.html
@@ -40,10 +40,21 @@
         <div class="preloader-inner"><img src="assets/img/logo.png" alt="Vibeson"> <span class="loader"></span></div>
     </div>
     <div class="vs-menu-wrapper">
-        <div class="vs-menu-area text-center"><button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.png" alt="Vibeson"></a></div>
-            <form action="#" class="mobile-menu-form"><input type="text" class="form-control" placeholder="Search...">
-                <button type="submit"><i class="fas fa-search"></i></button>
+        <div class="vs-menu-area text-center" style="flex-direction: row-reverse;">
+            <button class=" vs-menu-toggle">
+                <i class="fal fa-times">
+                </i>
+            </button>
+            <div class="mobile-logo">
+                <a href="index.html">
+                    <img src="assets/img/logo.png" alt="Vibeson">
+                </a>
+            </div>
+            <form action="#" class="mobile-menu-form">
+                <input type="text" class="form-control" placeholder="Search...">
+                <button type="submit"><i class="fas fa-search">
+
+                    </i></button>
             </form>
             <div class="vs-mobile-menu">
                 <ul>
@@ -356,7 +367,7 @@
         </div>
     </section>
     <footer class="footer-wrapper bg-secondary footer-layout1" data-bg-src="assets/img/bg/footer-bg-1-1.jpg">
-        <div class="widget-area">
+        <div class="widget-area" style="background-color: #FFB18B;">
             <div class="container">
                 <div class="row gx-60 justify-content-between">
                     <div class="col-lg-4 col-xl-4 align-self-center">
