--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
         <div class="preloader-inner"><img src="assets/img/logo.png" alt="Vibeson"> <span class="loader"></span></div>
     </div>
     <div class="vs-menu-wrapper">
-        <div class="vs-menu-area text-center"><button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
+        <div class="vs-menu-area text-center" style="flex-direction: row-reverse;"><button class="vs-menu-toggle"><i
+                    class="fal fa-times"></i></button>
             <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.png" alt="Vibeson"></a></div>
             <form action="#" class="mobile-menu-form"><input type="text" class="form-control" placeholder="Search...">
                 <button type="submit"><i class="fas fa-search"></i></button>
             </form>
             <div class="vs-mobile-menu">
                 <ul>
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">الصفحة الرئيسية</a>
                     </li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="service.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">حولنا</a></li>
+                    <li><a href="service.html">خدماتنا</a></li>
+                    <li><a href="contact.html">تواصل معنا</a></li>
                 </ul>
             </div>
         </div>
@@ -119,7 +120,8 @@
             <div class="sticky-active py-2 py-lg-0">
                 <div class="vs-container container">
                     <div class="position-relative">
-                        <div class="row justify-content-between align-items-center">
+                        <div class="row justify-content-between align-items-center"
+                            style="flex-direction: row-reverse;">
                             <div class="order-1 order-xxl-0 col-auto col-xxl-5">
                                 <nav class="main-menu menu-style1 d-none d-lg-block">
                                     <ul style="display: flex; flex-direction: row-reverse;">
@@ -756,7 +758,7 @@
                     </div>
                 </div>
             </div>
-            <section class="subscribe-wrapper py-50" style="background-color: #f8a086;">
+            <section class="subscribe-wrapper py-50" style="background-color: #FFB18B;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-7 my-15">
