--- a/service.html
+++ b/service.html
@@ -40,7 +40,8 @@
         <div class="preloader-inner"><img src="assets/img/logo.png" alt="Vibeson"> <span class="loader"></span></div>
     </div>
     <div class="vs-menu-wrapper">
-        <div class="vs-menu-area text-center"><button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
+        <div class="vs-menu-area text-center" style="flex-direction: row-reverse;">
+            <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.png" alt="Vibeson"></a></div>
             <form action="#" class="mobile-menu-form"><input type="text" class="form-control" placeholder="Search...">
                 <button type="submit"><i class="fas fa-search"></i></button>
